--- a/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
+++ b/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
@@ -21,11 +21,19 @@
     "jobs.labels.cluster": "Cluster",
     "jobs.labels.actor": "Actor",
     "jobs.labels.tasks": "Tasks",
+    "jobs.labels.totalTasks": "Total",
+    "jobs.labels.completedTasks": "Completed",
     "jobs.labels.scope": "Scope",
     "jobs.labels.waiting": "Waiting",
     "jobs.labels.running": "Running",
     "jobs.filters.scope.placeholder": "Select scope",
     "jobs.filters.scope.prefix": "Scope:",
     "jobs.filters.status.placeholder": "Select status",
-    "jobs.filters.status.prefix": "Status:"
+    "jobs.filters.status.prefix": "Status:",
+    "jobs.execution.summary.title": "Execution summary",
+    "jobs.execution.summary.description": "Monitors the execution time of the job",
+    "jobs.tasks.summary.title": "Tasks summary",
+    "jobs.tasks.summary.description": "The completion state of the tasks",
+    "jobs.details.title": "Job details",
+    "jobs.details.description": "General information about the job"
 }
