pre-final job page

--- a/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
+++ b/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
@@ -13,6 +13,20 @@
     "jobs.statuses.succeeded": "Succeeded",
     "jobs.statuses.failed": "Failed",
     "jobs.statuses.cancelled": "Cancelled",
+    "jobs.statuses.created.alert.title": "Job created",
+    "jobs.statuses.pending.alert.title": "Job pending execution",
+    "jobs.statuses.running.alert.title": "Job running",
+    "jobs.statuses.partially_succeeded.alert.title": "Job partially succeeded",
+    "jobs.statuses.succeeded.alert.title": "Job succeeded",
+    "jobs.statuses.failed.alert.title": "Job failed",
+    "jobs.statuses.cancelled.alert.title": "Job cancelled",
+    "jobs.statuses.created.alert.description": "The job has been initialized and is waiting to be processed. No tasks have started yet.",
+    "jobs.statuses.pending.alert.description": "The job has been submitted to the cluster and is waiting for resources to become available. Execution will begin shortly.",
+    "jobs.statuses.running.alert.description": "The job is currently being executed. One or more tasks are actively running on the cluster.",
+    "jobs.statuses.partially_succeeded.alert.description": "The job has completed but some tasks did not succeed. Check the task details for more information about the failures.",
+    "jobs.statuses.succeeded.alert.description": "All tasks in the job completed successfully. The job has finished execution with no errors.",
+    "jobs.statuses.failed.alert.description": "All tasks in the job have failed. Check the error logs for details about what went wrong during execution.",
+    "jobs.statuses.cancelled.alert.description": "The job was manually cancelled before completion. Partial results may be available depending on when cancellation occurred.",
     "jobs.scopes.user": "User",
     "jobs.scopes.workspace": "Workspace",
     "jobs.menu.jobs": "Jobs",
@@ -21,11 +35,14 @@
     "jobs.labels.cluster": "Cluster",
     "jobs.labels.actor": "Actor",
     "jobs.labels.tasks": "Tasks",
+    "jobs.labels.task": "Task",
     "jobs.labels.totalTasks": "Total",
     "jobs.labels.completedTasks": "Completed",
     "jobs.labels.scope": "Scope",
     "jobs.labels.waiting": "Waiting",
     "jobs.labels.running": "Running",
+    "jobs.labels.package": "Package",
+    "jobs.labels.template": "Template",
     "jobs.filters.scope.placeholder": "Select scope",
     "jobs.filters.scope.prefix": "Scope:",
     "jobs.filters.status.placeholder": "Select status",
@@ -35,5 +52,7 @@
     "jobs.tasks.summary.title": "Tasks summary",
     "jobs.tasks.summary.description": "The completion state of the tasks",
     "jobs.details.title": "Job details",
-    "jobs.details.description": "General information about the job"
+    "jobs.details.description": "General information about the job",
+    "jobs.task.types.function": "Function",
+    "jobs.task.types.mpi": "MPI"
 }
