task page details

--- a/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
+++ b/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
@@ -50,12 +50,24 @@
     "jobs.filters.status.prefix": "Status:",
     "jobs.execution.summary.title": "Execution summary",
     "jobs.execution.summary.description": "Monitors the execution time of the job",
-    "jobs.tasks.summary.title": "Tasks summary",
-    "jobs.tasks.summary.description": "The completion state of the tasks",
     "jobs.details.title": "Job details",
     "jobs.details.description": "General information about the job",
+    "jobs.tasks.summary.title": "Tasks summary",
+    "jobs.tasks.summary.description": "The completion state of the tasks",
     "jobs.tasks": "Tasks",
-    "jobs.task": "Task",
-    "jobs.task.types.function": "Function",
-    "jobs.task.types.mpi": "MPI"
+    "jobs.tasks.task": "Task",
+    "jobs.tasks.types.function": "Function",
+    "jobs.tasks.types.mpi": "MPI",
+    "jobs.tasks.statuses.created.alert.title": "Task created",
+    "jobs.tasks.statuses.pending.alert.title": "Task pending execution",
+    "jobs.tasks.statuses.running.alert.title": "Task running",
+    "jobs.tasks.statuses.succeeded.alert.title": "Task succeeded",
+    "jobs.tasks.statuses.failed.alert.title": "Task failed",
+    "jobs.tasks.statuses.cancelled.alert.title": "Task cancelled",
+    "jobs.tasks.statuses.created.alert.description": "The task has been initialized and is waiting to be processed. Execution has not started yet.",
+    "jobs.tasks.statuses.pending.alert.description": "The task is waiting for cluster resources to become available. Execution will begin when resources are allocated.",
+    "jobs.tasks.statuses.running.alert.description": "The task is currently being executed on the cluster.",
+    "jobs.tasks.statuses.succeeded.alert.description": "The task completed successfully without errors.",
+    "jobs.tasks.statuses.failed.alert.description": "The task failed during execution. Check the error logs for details about what went wrong.",
+    "jobs.tasks.statuses.cancelled.alert.description": "The task was cancelled before completion. This may have been initiated manually or by the system."
 }
