--- a/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
+++ b/ui/shoc-ui/Shoc.Ui/src/i18n/messages/en/jobs.json
@@ -44,12 +44,16 @@
     "jobs.labels.running": "Running",
     "jobs.labels.package": "Package",
     "jobs.labels.template": "Template",
+    "jobs.labels.pendingAt": "Pending At",
+    "jobs.labels.runningAt": "Running At",
+    "jobs.labels.completedAt": "Completed At",
     "jobs.filters.scope.placeholder": "Select scope",
     "jobs.filters.scope.prefix": "Scope:",
     "jobs.filters.status.placeholder": "Select status",
     "jobs.filters.status.prefix": "Status:",
     "jobs.execution.summary.title": "Execution summary",
     "jobs.execution.summary.description": "Monitors the execution times of the job",
+    "jobs.general.title": "General",
     "jobs.details.title": "Job details",
     "jobs.details.description": "General information about the job",
     "jobs.resources.types.cpu": "CPU",
@@ -58,6 +62,8 @@
     "jobs.resources.types.amdGpu": "AMD GPU",
     "jobs.logs": "Logs",
     "jobs.logs.actions.view": "View logs",
+    "jobs.logs.placeholder": "Logs of your task...",
+    "jobs.logs.errors.notAvailable": "Logs are not available",
     "jobs.tasks.summary.title": "Tasks summary",
     "jobs.tasks.summary.description": "The completion state of the tasks",
     "jobs.tasks": "Tasks",
